--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ apply plugin: 'java'
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
+    flatDir {
+        name 'repo'
+        dirs '../libs'
+    }
     jcenter()
 }
 
@@ -27,4 +31,10 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.11'
+}
+
+uploadArchives {
+    repositories {
+        add project.repositories.repo
+    }
 }
